--- a/Cource/lesson 8/practika c/styleB.css
+++ b/Cource/lesson 8/practika c/styleB.css
@@ -10,6 +10,10 @@ h1 {
     margin-top: 10px;
 }
 
+p {
+    font-size: 16px;
+}
+
 img {
     width: 400px;
     height: 300px;
@@ -22,9 +26,33 @@ img {
     height: 100%;
     position: absolute;
     top: 100px;
-    left: 15%;
+    left: 8%;
     overflow: auto;
 }
 .inline {
     display: inline-block;
+}
+
+
+.spaniel {
+    max-width: 700px;
+    display: inline-block;
+}
+
+.kolli {
+    margin-left: 10px;
+    max-width: 700px;
+    display: inline-block;
+}
+
+.layt {
+    float: left;
+    margin: 0 10px 5px 0;
+}
+
+h2 {
+    margin-top: 30px;
+    font-size: 36px;
+    font-weight: bold;
+    margin-left: 400px;
 }
