--- a/lesson 13/style.css
+++ b/lesson 13/style.css
@@ -38,15 +38,18 @@ p {
     margin-top: 2rem;
     display: flex;
     width: 100%;
-    height: 53.1%;
+    height: 36.5%;
     justify-content: space-between;
 }
 
 #block_1_Text {
     color:#22202E;
+    padding-top: 0rem;
+    padding-left: 1.5rem;
 }
 
 #lupa {
+    margin-top: 0.6rem;
     width: 1.6rem;
     height: 1.6rem;
     background-image: url(./allPhoto/Search.svg);
@@ -60,12 +63,14 @@ p {
 }
 
 #icon_telezka {
+    margin-top: 0.6rem;
     width: 1.6rem;
     height: 1.6rem;
     background-image: url(./allPhoto/Shopping--cart.svg);
 }
 
 #icon_people {
+    margin-top: 0.6rem;
     width: 1.6rem;
     height: 1.6rem;
     background-image: url(./allPhoto/User--avatar.svg);
@@ -80,8 +85,8 @@ hr {
 }
 
 #main_menu {
-    margin: auto;
-    width: 79rem;
+    margin-left: 25.6%;
+    width: 57%;
 }
 
 ul {
